CLOSED FIXED Bug 37266
[Qt] Warnings when compiling InspectorClientQt.cpp
https://bugs.webkit.org/show_bug.cgi?id=37266
Summary [Qt] Warnings when compiling InspectorClientQt.cpp
Benjamin Poulain
Reported 2010-04-08 06:32:21 PDT
When compiling InspectorClientQt.cpp, GCC output tons of warning for the switch(): WebCoreSupport/InspectorClientQt.cpp: In function 'WebCore::InspectorController::Setting WebCore::variantToSetting(const QVariant&)': WebCoreSupport/InspectorClientQt.cpp:213: warning: enumeration value 'Invalid' not handled in switch WebCoreSupport/InspectorClientQt.cpp:213: warning: enumeration value 'UInt' not handled in switch WebCoreSupport/InspectorClientQt.cpp:213: warning: enumeration value 'LongLong' not handled in switch etc, etc
Attachments
Simple patch (1.12 KB, patch)
2010-04-08 06:38 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2010-04-08 06:38:57 PDT
Created attachment 52858 [details] Simple patch
WebKit Commit Bot
Comment 2 2010-04-08 08:57:20 PDT
Comment on attachment 52858 [details] Simple patch Clearing flags on attachment: 52858 Committed r57281: <http://trac.webkit.org/changeset/57281>
WebKit Commit Bot
Comment 3 2010-04-08 08:57:25 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 4 2010-04-09 01:15:11 PDT
Revision r57281 cherry-picked into qtwebkit-2.0 with commit 495f0dbc739bad809f60326825424758b7daf526
Note You need to log in before you can comment on or make changes to this bug.