2010-04-08  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] Warnings when compiling InspectorClientQt.cpp
        https://bugs.webkit.org/show_bug.cgi?id=37266

        Add a default: for the switch()-case to avoid
        warnings.

        * WebCoreSupport/InspectorClientQt.cpp:
        (WebCore::variantToSetting):

Canonical link: https://commits.webkit.org/48574@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57281 268f45cc-cd09-0410-ab3c-d52691b4dbfc