WebKit/qt/WebCoreSupport/InspectorClientQt.cpp
@@ -161,6 +161,8 @@ static String variantToSetting(const QVariant& qvariant)
         retVal = qvariant.toBool() ? "true" : "false";
     case QVariant::String:
         retVal = qvariant.toString();
+    default:
+        break;
     }
 
     return retVal;
